# raspberry-pi-projects

./: .gitignore  .hadolint.yaml  .markdownlint.json  LICENSE  README.md  install.sh
.github/workflows/: compose-validate.yml  lint.yml
docs/: free-domain-dns.md  glossary.md  hardware-setup.md  os-install.md  remote-access.md
projects/01-static-site-caddy/: .env.example  Caddyfile  README.md  docker-compose.yml
projects/02-dynamic-site-fastapi/: .env.example  Caddyfile  README.md  docker-compose.yml
projects/03-cloudflare-tunnel/: .env.example  README.md  config.example.yml  docker-compose.quick.yml  docker-compose.yml
projects/04-tailscale-private/: .env.example  README.md  docker-compose.yml  install.sh
projects/05-ollama-local-llm/: README.md  alt-models.md  benchmarks.md  docker-compose.yml
projects/06-llamacpp-local-llm/: README.md  benchmark.sh  install.sh  run-server.sh
projects/07-free-llm-api-router/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/07-free-llm-api-router/src/llm_router/: __init__.py  cli.py  config.py  router.py  server.py
projects/07-free-llm-api-router/src/llm_router/providers/: __init__.py  base.py  cerebras.py  gemini.py  groq.py  huggingface.py  openrouter.py
projects/07-free-llm-api-router/tests/: test_providers.py  test_router.py
projects/08-hybrid-llm-fallback/: .env.example  README.md  docker-compose.yml
projects/09-24-7-ops/: README.md  docker-compose.override.example.yml
projects/10-monitoring-uptime/: README.md  docker-compose.yml
projects/11-security-baseline/: README.md  (+2 more)
(+36 files in other folders)
