[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-router"
version = "0.1.0"
description = "OpenAI-compatible router across free LLM API tiers (Groq, Cerebras, Gemini, OpenRouter, HF)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "femrebora" }]
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
llm-router = "llm_router.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
